# hetzner-dyndns

./: .gitignore  Pipfile  default.nix  flake.nix  hetzner-dyndns.py  pyproject.toml  requirements.txt  setup.py
hetzner_dyndns/: __init__.py  dyndns.py
